
syntax = "proto3";

//import "google/api/annotations.proto";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.routeguide";
//option java_outer_classname = "RouteGuideProto";

package swapresolver;

// Interface exported by the server.
service SwapResolver {

  rpc ResolveHash(ResolveReq) returns (ResolveResp) {}

}

message ResolveReq {
  string hash = 1 ;
}

message ResolveResp {
  string preimage = 1;
}

